--- a/src/assets/css/style.scss
+++ b/src/assets/css/style.scss
@@ -4,6 +4,21 @@ $limewhite: #F0F7F4;
 $purple: #8F3985;
 $cyan: #99E1D9;
 
+// Scrollbar style
+*::-webkit-scrollbar {
+  width: 0.5em;
+}
+ 
+*::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 6px white;
+}
+ 
+*::-webkit-scrollbar-thumb {
+  background-color: #d9d9d9;
+  border-radius: 5px;
+}
+
+// Form components style
 .form.toggle-container {
   display: inline-block;
   font-family: khumbh-sans;
@@ -52,6 +67,54 @@ $cyan: #99E1D9;
 
     span {
       position: absolute;
+    }
+  }
+}
+
+.form.dropdown {
+  border: 1px solid $black;
+  height: 32px;
+  line-height: 32px;
+  text-align: center;
+  font-weight: 600;
+  font-size: 0.85rem;
+  border-radius: 3px;
+  box-shadow: 0px 3px 5px rgba(0, 0, 0, 0.05);
+  cursor: pointer;
+  position: relative;
+
+  &:active {
+    .label {
+      transform: scale(0.95);
+    }
+  }
+
+  .label { 
+    transition: transform 0.25s;
+    transform: scale(1);
+    text-transform: uppercase;
+  }
+
+  .dropdown-list {
+    transform-origin: center top;
+    position: absolute;
+    width: 100%;
+    left: -2px;
+    border: 1px solid $black;
+    top: 42px;
+    max-height: 120px;
+    border-radius: 3px;
+    z-index: 3;
+    box-shadow: 0px 3px 8px rgba(0, 0, 0, 0.15);
+    overflow-y: scroll;
+
+    .option {
+      background-color: white;
+      transition: background-color 0.25s;
+
+      &:hover {
+        background-color: $limewhite;
+      }
     }
   }
 }
