--- a/src/assets/css/style.scss
+++ b/src/assets/css/style.scss
@@ -18,6 +18,10 @@ $cyan: #99E1D9;
   border-radius: 5px;
 }
 
+.padded {
+  margin-bottom: 20px;
+}
+
 // Form components style
 .form.toggle-container {
   display: inline-block;
@@ -115,6 +119,52 @@ $cyan: #99E1D9;
       &:hover {
         background-color: $limewhite;
       }
+    }
+  }
+}
+
+.form.range-selector {
+
+  height: 15px;
+  box-sizing: border-box;
+  position: relative;
+
+  .anchor {
+    width: 15px;
+    height: 15px;
+    background-color: $black;
+    border-radius: 30px;
+    position: absolute;
+
+    &.left {
+      left: 0;
+    }
+    &.right {
+      right: 0;
+    }
+  }
+
+  .slider-base {
+    height: 3px;
+    background: $black;
+    position: relative;
+    transform: translateY(6px);
+  }
+
+  .slider {
+    position: absolute;
+    width: 17px;
+    height: 17px;
+    border-radius: 30px;
+    background-color: $cyan;
+    top: -1px;
+    left: -1px;
+    cursor: pointer;
+    transform: scale(1);
+    transition: transform 0.25s;
+
+    &:active {
+      transform: scale(1.1);
     }
   }
 }
