--- a/web/src/assets/css/style.scss
+++ b/web/src/assets/css/style.scss
@@ -401,6 +401,7 @@ body {
 
   .right-area {
     flex-grow: 1;
+    margin-left: 20px;
   }
 }
 
@@ -432,4 +433,82 @@ body {
   width: 100%;
   box-sizing: border-box;
   z-index: 3;
+}
+
+.search-results-area {
+  position: relative;
+
+  .search-results-container {
+    overflow-y: scroll;
+    position: absolute;
+    width: 100%;
+    bottom: 0;
+    top: 35px;
+    box-sizing: border-box;
+  }
+}
+
+.search-result {
+  position: relative;
+
+  .view-property-button {
+    position: absolute;
+    right: 10px;
+    bottom: 10px;
+  }
+
+  .add-to-collection {
+    width: 30px;
+    height: 30px;
+    position: absolute;
+    right: 10px;
+    top: 10px;
+    text-align: center;
+    line-height: 40px;
+    font-size: 1.3rem;
+    cursor: pointer;
+  }
+
+  .result-grid {
+    display: flex;
+
+    .primary-image-area {
+      width: 130px;
+      height: 130px;
+
+      .image-container {
+        background-color: $cyan;
+        width: 85%;
+        height: 85%;
+        margin: 0 auto;
+        transform: translateY(10px);
+        border-radius: 5px;
+      }
+    }
+
+    .secondary-image-area {
+      width: 40px;
+      height: 40px;
+      margin-right: 5px;
+
+      .image-container {
+        background-color: $pink;
+        width: 100%;
+        height: 100%;
+        margin: 0 auto;
+        border-radius: 5px;
+      }
+    }
+
+    .image-count-area {
+      height: 40px;
+      line-height: 40px;
+      font-size: 0.8rem;
+      cursor: pointer;
+    }
+
+    .right-info-area {
+      flex-grow: 1;
+    }
+  }
 }
