--- a/web/src/assets/css/style.scss
+++ b/web/src/assets/css/style.scss
@@ -512,3 +512,25 @@ body {
     }
   }
 }
+
+.alert-controller {
+  position: absolute;
+  width: 600px;
+  padding: 10px 10px;
+  left: 50%;
+  transform: translateX(-50%);
+  top: 20px;
+  z-index: 10;
+  border-radius: 3px;
+  font-size: 0.8rem;
+
+  &.success {
+    background-color: #4ad488;
+    box-shadow: 0px 0px 5px rgba(61, 161, 106, 0.5);
+  }
+
+  &.error {
+    background-color: #e65c5c;
+    box-shadow: 0px 0px 5px rgba(201, 71, 71, 0.3);
+  }
+}
