--- a/web/src/assets/css/style.scss
+++ b/web/src/assets/css/style.scss
@@ -689,3 +689,73 @@ body {
     }
   }
 }
+
+.minimizable {
+ 
+  .content-title {
+    height: 30px;
+    line-height: 30px;
+    display: flex;
+    cursor: pointer;
+
+    &:active {
+
+      .icon-area {
+        transform: scale(0.9);
+      }
+    }
+
+    .icon-area {
+      width: 30px;
+      min-width: 30px;
+      text-align: center;
+      line-height: 35px;
+      margin-right: 5px;
+      transform: scale(1);
+      transition: transform 0.25s;
+    }
+
+    .title-text {
+      flex-grow: 1;
+      font-weight: 600;
+      text-transform: uppercase;
+      font-size: 0.8rem;
+      letter-spacing: 1.15px;
+    }
+  }
+
+  .content-area {
+    box-sizing: border-box;
+    padding: 10px 0px 10px 40px;
+    transform-origin: top;
+    overflow: hidden;
+  }
+}
+
+.property-desc-entry {
+  display: flex;
+  font-size: 0.9rem;
+  margin-bottom: 5px;
+
+  .label {
+    margin-right: 10px;
+    font-weight: 600;
+    color: $black;
+  }
+}
+
+.progress-bar {
+  background-color: #CCCCCC;
+  height: 5px;
+  border-radius: 5px;
+
+  .progress-value {
+    height: 5px;
+    background-color: #4AF271;
+  }
+}
+
+.graph-holder {
+  border: 1px solid black;
+  height: 200px;
+}
