--- a/web/src/assets/css/layout.scss
+++ b/web/src/assets/css/layout.scss
@@ -1,3 +1,5 @@
+@import './style.scss';
+
 .layout-centered {
   position: fixed;
   left: 0;
@@ -23,5 +25,39 @@
         height: 100%;
       }
     }
+  }
+}
+
+// Loading Animation
+.lds-ripple {
+  display: inline-block;
+  position: relative;
+  width: 80px;
+  height: 80px;
+}
+.lds-ripple div {
+  position: absolute;
+  border: 4px solid $cyan;
+  opacity: 1;
+  border-radius: 50%;
+  animation: lds-ripple 1s cubic-bezier(0, 0.2, 0.8, 1) infinite;
+}
+.lds-ripple div:nth-child(2) {
+  animation-delay: -0.5s;
+}
+@keyframes lds-ripple {
+  0% {
+    top: 36px;
+    left: 36px;
+    width: 0;
+    height: 0;
+    opacity: 1;
+  }
+  100% {
+    top: 0px;
+    left: 0px;
+    width: 72px;
+    height: 72px;
+    opacity: 0;
   }
 }
