--- a/web/src/assets/css/layout.scss
+++ b/web/src/assets/css/layout.scss
@@ -61,3 +61,68 @@
     opacity: 0;
   }
 }
+
+.block-loading {
+  height: 16px;
+  background-color: #c9c9c9;
+  border-radius: 3px;
+  margin-right: 8px;
+  position: relative;
+  overflow: hidden;
+  // animation: block-pulse 1s cubic-bezier(0, 0.2, 0.8, 1) infinite;
+
+  &::before {
+    content: '';
+    width: 40px;
+    height: 16px;
+    background: rgb(201,201,201);
+    background: linear-gradient(90deg, 
+    rgba(201,201,201,1) 0%, 
+    rgba(209, 209, 209,1) 50%, 
+    rgba(201,201,201,1) 100%);
+    position: absolute;
+    animation: block-pulse 1s cubic-bezier(0, 0.2, 0.8, 1) infinite;
+  }
+}
+
+@keyframes block-pulse {
+  0% {
+    left: -10%;
+  }
+  100% {
+    left: 110%;
+  }
+}
+
+.image-loading {
+  width: 100%;
+  height: 100%;
+  background-color: #c9c9c9;
+  border-radius: 3px;
+  margin-right: 8px;
+  position: relative;
+  overflow: hidden;
+  // animation: block-pulse 1s cubic-bezier(0, 0.2, 0.8, 1) infinite;
+
+  &::before {
+    content: '';
+    width: 40px;
+    height: 110px;
+    background: rgb(201,201,201);
+    background: linear-gradient(90deg, 
+    rgba(201,201,201,1) 0%, 
+    rgba(209, 209, 209, 1) 50%, 
+    rgba(201,201,201,1) 100%);
+    position: absolute;
+    animation: block-pulse-2 1s cubic-bezier(0, 0.2, 0.8, 1) infinite;
+  }
+}
+
+@keyframes block-pulse-2 {
+  0% {
+    left: -10%;
+  }
+  100% {
+    left: 110%;
+  }
+}
