--- a/web/src/assets/css/style.scss
+++ b/web/src/assets/css/style.scss
@@ -1,7 +1,7 @@
 $pink: #E0777D;
 $black: #1E2019;
-$limewhite: #F0F7F4;
-$purple: #8F3985;
+$limewhite: #ebf5f1;
+$purple: #957FEF;
 $cyan: #99E1D9;
 $cyanDark: #79b5ae;
 
@@ -771,4 +771,115 @@ body {
 
 .graph-holder {
   height: 250px;
+}
+
+.app-view-area {
+  display: flex;
+
+  .user-navbar {
+    width: 40px;
+    max-width: 40px;
+    margin-right: 20px;
+
+    .icon-link {
+      width: 40px;
+      height: 40px;
+      font-size: 1.4rem;
+      line-height: 54px;
+      text-align: center;
+      cursor: pointer;
+      background-color: white;
+      transition: background 0.25s, transform 0.25s;
+      border-radius: 3px;
+      transform: scale(1);
+
+      &.active {
+        background-color: $pink;
+        color: white;
+        &:hover {
+          background-color: $pink;
+        }
+        &:active {
+          transform: scale(1);
+        }
+      }
+
+      &:hover {
+        background-color: $limewhite;
+      }
+      &:active {
+        transform: scale(0.9);
+      }
+    }
+  }
+
+  .content-area {
+    flex-grow: 1;
+  }
+}
+
+.popup-bubble {
+  display: inline-block;
+  position: relative;
+
+  &:hover {
+    .message-area {
+      opacity: 1;
+      display: block;
+      
+      &.left {
+        transform: translateX(0px) translateY(-50%);
+      }
+      &.right {
+        transform: translateX(0px) translateY(-50%);
+      }
+    }
+  }
+
+  .message-area {
+    text-align: center;
+    position: absolute;
+    top: 50%;
+    font-size: 0.8rem;
+    background-color: $black;
+    color: white;
+    z-index: 6;
+    padding: 4px 10px;
+    border-radius: 3px;
+    opacity: 0;
+    transition: opacity 0.25s, transform 0.25s;
+    display: none;
+
+    &.left {
+      transform: translateX(-10px) translateY(-50%);
+      &::before {
+        content: '';
+        position: absolute;
+        right: -15px;
+        width: 0;
+        height: 0;
+        border-left: 8px solid $black;
+        border-top: 6px solid transparent;
+        border-bottom: 6px solid transparent;
+        border-right: 8px solid transparent;
+        box-sizing: content-box;
+      }
+    }
+
+    &.right {
+      transform: translateX(10px) translateY(-50%);
+      &::before {
+        content: '';
+        position: absolute;
+        left: -15px;
+        width: 0;
+        height: 0;
+        border-left: 8px solid transparent;
+        border-top: 6px solid transparent;
+        border-bottom: 6px solid transparent;
+        border-right: 8px solid $black;
+        box-sizing: content-box;
+      }
+    }
+  }
 }
