--- a/web/src/assets/css/style.scss
+++ b/web/src/assets/css/style.scss
@@ -894,3 +894,69 @@ body {
     }
   }
 }
+
+.suggestion-input {
+  border: 1px solid $black;
+  border-radius: 3px;
+  height: 40px;
+  position: relative;
+
+  &:active {
+    border: 1px solid $black;
+  }
+
+  .suggested-label {
+    text-transform: uppercase;
+    color: $black;
+    height: 40px;
+    line-height: 40px;
+    font-weight: 600;
+    font-size: 0.7rem;
+    letter-spacing: 1px;
+    position: absolute;
+    padding: 0 10px;
+    transition: height 0.25s, line-height 0.25s, font-size 0.25s;
+
+    &.focused {
+      height: 15px;
+      line-height: 15px;
+      font-size: 0.5rem;
+      color: $black;
+    }
+  }
+
+  .suggested-input {
+    width: 100%;
+    box-sizing: border-box;
+    height: 100%;
+    border: none;
+    padding: 0 10px;
+    outline: none;
+  }
+
+  .suggestion-list {
+    border: 1px solid $black;
+    overflow: hidden;
+    position: absolute;
+    top: calc(100% + 10px);
+    width: 100%;
+    box-sizing: border-box;
+    z-index: 4;
+    border-radius: 3px;
+    box-shadow: 0px 3px 5px rgba(30, 32, 25, 0.15);
+
+    .suggestion-entry {
+      background-color: white;
+      height: 40px;
+      line-height: 40px;
+      font-size: 0.8rem;
+      padding: 0 10px;
+      transition: background 0.25s;
+      cursor: pointer;
+
+      &:hover {
+        background-color: $limewhite;
+      }
+    }
+  }
+}
