--- a/web/src/assets/css/style.scss
+++ b/web/src/assets/css/style.scss
@@ -960,3 +960,67 @@ body {
     }
   }
 }
+
+.collection-entry-holder {
+  display: flex;
+  flex-wrap: wrap;
+
+  .collection-entry {
+    display: flex;
+    margin-bottom: 20px;
+    box-sizing: border-box;
+    width: 50%;
+    min-width: 40%;
+    height: 170px;
+
+    &:last-child {
+      margin-bottom: none;
+    }
+
+    .image-area {
+      display: flex;
+      .image-container {
+        min-width: 170px;
+        width: 170px;
+        height: 170px;
+        background-color: $purple;
+        border-radius: 5px;
+      }
+
+      .image-previews {
+        margin-left: 16px;
+        margin-right: 16px;
+        width: 60px;
+        height: 100%;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+
+        .image-preview-entry {
+          background-color: $pink;
+          height: 26%;
+          width: 100%;
+          border-radius: 3px;
+        }
+      }
+    }
+
+  }
+}
+
+.collection-entry-holder {
+  overflow-y: scroll;
+}
+
+.attr-entry {
+  display: flex;
+  font-size: 0.9rem;
+
+  .attr-key {
+    font-weight: 600;
+    margin-right: 5px;
+    text-transform: uppercase;
+    font-size: 0.75rem;
+    line-height: 18px;
+  }
+}
