Created "Student Complete Registration" view for students who log in with cas but are not linked to an account in our database

--- a/web/src/assets/css/style.scss
+++ b/web/src/assets/css/style.scss
@@ -1033,3 +1033,9 @@ body {
     line-height: 18px;
   }
 }
+
+.title-1 {
+  font-size: 0.85rem;
+  font-weight: 600;
+  text-transform: uppercase;
+}
