--- a/web/src/assets/css/style.scss
+++ b/web/src/assets/css/style.scss
@@ -289,48 +289,53 @@ body {
 }
 
 .app-button {
-  box-sizing: border-box;
-  height: 30px;
-  line-height: 26px;
+  height: 38px;
+  line-height: 38px;
   color: white;
-  padding: 0 10px;
+  padding: 0 20px;
   border-radius: 3px;
   cursor: pointer;
   font-weight: 600;
   transition: transform 0.25s;
+  transition-timing-function: ease-in-out;
   position: relative;
   transform: scale(1);
+
+  &.left-icon {padding-left: 58px;}
+  &.right-icon {padding-right: 58px;}
 
   &:active {
     transform: scale(0.95);
   }
 
   .text-area {
-
-    &.left {
-      margin-left: 25px;
-    }
-
-    &.right {
-      margin-right: 25px;
-    }
+    text-transform: uppercase;
+    font-size: 0.7rem;
+    letter-spacing: 1.2px;
+    display: inline-block;
+    vertical-align: middle;
   }
 
   .icon-area {
-    width: 25px;
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    height: 100%;
-    line-height: 30px;
+    width: 38px;
+    line-height: 46px;
+    box-sizing: border-box;
     text-align: center;
+    display: inline-block;
+    vertical-align: middle;
+    background-color: rgba(0, 0, 0, 0.05);
+    position: absolute;
+    top: -2px;
+    bottom: -2px;
+    font-size: 1rem;
 
-    &.right {
-      right: 0;
-    }
-    
     &.left {
+      margin-right: 20px;
       left: 0;
+    }
+    &.right {
+      margin-left: 20px;
+      right: 0;
     }
   }
 }
