--- a/web/src/assets/css/style.scss
+++ b/web/src/assets/css/style.scss
@@ -701,7 +701,7 @@ body {
     background-color: #82AEF9;
   }
   &.red {
-    background-color: #ff7070;
+    background-color: #ff787f;
   }
 
   .action-button {
@@ -717,6 +717,9 @@ body {
     transition: transform 0.25s;
     right: 10px;
     bottom: 10px;
+    letter-spacing: 2px;
+    text-transform: uppercase;
+    font-size: 0.55rem;
 
     &:active {
       transform: scale(0.9);
