--- a/web/src/assets/css/style.scss
+++ b/web/src/assets/css/style.scss
@@ -637,7 +637,7 @@ body {
   font-size: 0.8rem;
 
   &.success {
-    background-color: #4ad488;
+    background-color: #66ffc7;
     box-shadow: 0px 0px 5px rgba(61, 161, 106, 0.5);
   }
 
@@ -798,6 +798,8 @@ body {
 
 .app-view-area {
   display: flex;
+  border: 1px solid green;
+  position: relative;
 
   .user-navbar {
     width: 40px;
@@ -849,6 +851,7 @@ body {
 
   .content-area {
     flex-grow: 1;
+    position: relative;
   }
 }
 
