--- a/web/src/assets/css/style.scss
+++ b/web/src/assets/css/style.scss
@@ -1146,7 +1146,6 @@ body {
     transform: scale(1);
     transition: transform 0.25s, box-shadow 0.25s;
     color: $black;
-    box-shadow: 0px 0px 0px rgba(0, 0, 0, 0.0);
     background-color: white;
     display: flex;
     text-transform: uppercase;
@@ -1166,7 +1165,6 @@ body {
 
     &:active {
       transform: scale(1);
-      box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.3);
     }
 
     &.active {
@@ -1421,6 +1419,79 @@ body {
   .header {
     height: 38px;
     line-height: 38px;
-    border: 1px solid red;
+  }
+
+  .overview-container {
+    padding-top: 10px;
+    overflow-y: scroll;
+
+    .image-container {
+      display: flex;
+      margin-bottom: 20px;
+      position: relative;
+
+      .edit-top-right {
+        position: absolute;
+        top: 0;
+        right: 0;
+      }
+
+      .left-side {
+        display: flex;
+
+        .image-holder {
+          width: 150px;
+          margin-right: 10px;
+          height: 150px;
+          border-radius: 3px;
+          border-radius: 3px;
+          background-color: $pink;
+          display: flex;
+        }
+      }
+    }
+  }
+
+  .subheader {
+    font-size: 0.8rem;
+    font-weight: 600;
+    letter-spacing: 1px;
+    text-transform: uppercase;
+  }
+
+  .subheader-2 {
+    font-size: 0.7rem;
+    font-weight: 600;
+    letter-spacing: 1px;
+    text-transform: uppercase;
+  }
+}
+
+.labeled-value {
+  font-weight: 600;
+
+  .label {
+    color: rgba(0, 0, 0, 0.6);
+    text-transform: uppercase;
+    font-size: 0.7rem;
+    letter-spacing: 1.1px;
+  }
+
+  .value {
+    font-size: 0.9rem;
+    letter-spacing: 0.6px;
+  }
+}
+
+.student-lease-modal {
+  display: flex;
+  margin-top: 20px;
+
+  .student-name {
+    flex-grow: 1;
+  }
+
+  .lease-period {
+    flex-grow: 2;
   }
 }
