--- a/web/src/assets/css/style.scss
+++ b/web/src/assets/css/style.scss
@@ -422,6 +422,35 @@ body {
   }
 }
 
+.input-field.suggestion {
+  
+  .suggestion-box {
+    position: absolute;
+    top: calc(100% + 10px);
+
+    background-color: $lightgrey;
+    width: 100%;
+    z-index: 10;
+    border-radius: 3px;
+    box-shadow: 0px 0px 3px rgba(0, 0, 0, 0.3);
+
+    .entry {
+      height: 30px;
+      line-height: 30px;
+      padding: 0 10px;
+      cursor: pointer;
+      background-color: rgba(0, 0, 0, 0);
+      transition: background 0.25s;
+      font-size: 0.8rem;
+      letter-spacing: 1.2px;
+
+      &:hover {
+        background-color: rgba(0, 0, 0, 0.1);
+      }
+    }
+  }
+}
+
 .dashed-underline {
   border-bottom: 1px dashed $cyanDark;
   cursor: pointer;
