--- a/web/src/assets/css/style.scss
+++ b/web/src/assets/css/style.scss
@@ -1524,3 +1524,49 @@ body {
     flex-grow: 2;
   }
 }
+
+.previous-logged-in-institution {
+  
+  display: flex;
+  position: relative;
+  margin-bottom: 80px;
+
+  .left-side {
+    width: 120px;
+    height: 120px;
+    margin-right: 10px;
+
+    .image-holder {
+      border: 1px solid $black;
+      border-radius: 3px;
+      height: 100%;
+      width: 100%;
+    }
+  }
+
+  .right-side {
+    flex-grow: 1;
+    .title {
+      font-weight: 600;
+      text-align: right;
+    }
+
+    .button-area {
+      position: absolute;
+      min-width: 200px;
+      max-width: 200px;
+      width: 200px;
+      right: 0;
+      bottom: 0;
+      z-index: 30;
+    }
+  }
+
+  .or-separator {
+    position: absolute;
+    bottom: -50px;
+    width: 100%;
+    text-align: center;
+    border-bottom: 1px solid black;
+  }
+}
