Added addToCollection query on frontend

--- a/web/src/assets/css/style.scss
+++ b/web/src/assets/css/style.scss
@@ -575,6 +575,10 @@ body {
     position: absolute;
     right: 10px;
     top: 10px;
+
+    &.added {
+      background-color: $pink;
+    }
   }
 
   .result-grid {
