Added query to get ownership information and allow only the landlord who owns the property to view

--- a/web/src/assets/css/style.scss
+++ b/web/src/assets/css/style.scss
@@ -1119,6 +1119,11 @@ body {
   text-transform: uppercase;
 }
 
+.title-0 {
+  font-size: 1rem;
+  font-weight: 600;
+}
+
 .section-header {
 
   height: 35px;
