added new font for paragraph texts

--- a/web/src/assets/css/fonts.scss
+++ b/web/src/assets/css/fonts.scss
@@ -8,3 +8,14 @@
   src: url('../fonts/KumbhSans/KumbhSans-Bold.ttf');
   font-weight: 600;
 }
+
+@font-face {
+  font-family: mukta;
+  src: url('../fonts/Mukta/Mukta-Regular.ttf');
+}
+
+@font-face {
+  font-family: mukta;
+  src: url('../fonts/Mukta/Mukta-Medium.ttf');
+  font-weight: 600;
+}
