--- a/web/src/assets/css/style.scss
+++ b/web/src/assets/css/style.scss
@@ -243,7 +243,7 @@ body {
           box-shadow: 0px 0px 3px rgba(0, 0, 0, 0.4);
 
           .value-label {
-            transform: scale(0.8);
+            transform: scale(0.8) translateX(-50%);
           }
         }
 
@@ -258,7 +258,7 @@ body {
           font-size: 0.65rem;
           padding: 2px 5px;
           border-radius: 3px;
-          transform: scale(1);
+          transform: scale(1) translateX(-50%);
         }
       }
 
@@ -294,10 +294,10 @@ body {
 }
 
 .app-button {
-  height: 38px;
-  line-height: 38px;
+  height: 30px;
+  line-height: 32px;
   color: white;
-  padding: 0 20px;
+  padding: 0 12px;
   border-radius: 3px;
   cursor: pointer;
   font-weight: 600;
@@ -306,8 +306,8 @@ body {
   position: relative;
   transform: scale(1);
 
-  &.left-icon {padding-left: 58px;}
-  &.right-icon {padding-right: 58px;}
+  &.left-icon {padding-left: 42px;}
+  &.right-icon {padding-right: 42px;}
 
   &:active {
     transform: scale(0.95);
@@ -322,8 +322,8 @@ body {
   }
 
   .icon-area {
-    width: 38px;
-    line-height: 46px;
+    width: 30px;
+    line-height: 40px;
     box-sizing: border-box;
     text-align: center;
     display: inline-block;
@@ -867,31 +867,37 @@ body {
   position: relative;
 
   .user-navbar {
-    width: 40px;
-    max-width: 40px;
-    margin-right: 20px;
+    width: 180px;
+    max-width: 150px;
+    margin-right: 10px;
 
     .icon-link {
-      width: 40px;
-      height: 40px;
+      height: 30px;
       font-size: 1.4rem;
-      line-height: 54px;
-      text-align: center;
+      line-height: 40px;
+      text-align: left;
       cursor: pointer;
       background-color: white;
       transition: background 0.25s, transform 0.25s;
-      border-radius: 3px;
+      border-radius: 2px;
       transform: scale(1);
       position: relative;
+      display: flex;
+
+      .icon-holder {
+        width: 40px;
+        text-align: center;
+        font-size: 1.1rem;
+      }
+
+      .icon-holder, .link-desc {
+        align-items: center;
+      }
 
       .link-desc {
-        position: absolute;
-        top: 50%;
-        color: $black;
         font-size: 0.8rem;
-        transform: translateY(-50%);
-        right: calc(100% + 10px);
-        font-weight: 600;
+        font-family: mukta;
+        line-height: 32px;
       }
 
       &.active {
@@ -909,7 +915,7 @@ body {
         background-color: $limewhite;
       }
       &:active {
-        transform: scale(0.9);
+        transform: scale(0.98);
       }
     }
   }
